--- a/app1/package.json
+++ b/app1/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
